Travis update: Sep 2024 (Build 798)
[skip ci]
