# api/openapi.yaml
@@ -2036,53 +2036,7 @@ components:
           text: text
           button_text: button_text
           video:
-            duration:
-            - image:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              date_time:
-                fallback_value: fallback_value
-              document:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              currency:
-                fallback_value: fallback_value
-                code: code
-                amount_1000: amount_1000
-              text: text
-              video:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              type: type
-            - image:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              date_time:
-                fallback_value: fallback_value
-              document:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              currency:
-                fallback_value: fallback_value
-                code: code
-                amount_1000: amount_1000
-              text: text
-              video:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              type: type
+            duration: 6
             thumbnail: thumbnail
             url: url
             file_size: 0
@@ -2095,53 +2049,7 @@ components:
           text: text
           button_text: button_text
           video:
-            duration:
-            - image:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              date_time:
-                fallback_value: fallback_value
-              document:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              currency:
-                fallback_value: fallback_value
-                code: code
-                amount_1000: amount_1000
-              text: text
-              video:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              type: type
-            - image:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              date_time:
-                fallback_value: fallback_value
-              document:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              currency:
-                fallback_value: fallback_value
-                code: code
-                amount_1000: amount_1000
-              text: text
-              video:
-                filename: filename
-                link: link
-                caption: caption
-                id: id
-              type: type
+            duration: 6
             thumbnail: thumbnail
             url: url
             file_size: 0
@@ -2210,53 +2118,7 @@ components:
         text: text
         button_text: button_text
         video:
-          duration:
-          - image:
-              filename: filename
-              link: link
-              caption: caption
-              id: id
-            date_time:
-              fallback_value: fallback_value
-            document:
-              filename: filename
-              link: link
-              caption: caption
-              id: id
-            currency:
-              fallback_value: fallback_value
-              code: code
-              amount_1000: amount_1000
-            text: text
-            video:
-              filename: filename
-              link: link
-              caption: caption
-              id: id
-            type: type
-          - image:
-              filename: filename
-              link: link
-              caption: caption
-              id: id
-            date_time:
-              fallback_value: fallback_value
-            document:
-              filename: filename
-              link: link
-              caption: caption
-              id: id
-            currency:
-              fallback_value: fallback_value
-              code: code
-              amount_1000: amount_1000
-            text: text
-            video:
-              filename: filename
-              link: link
-              caption: caption
-              id: id
-            type: type
+          duration: 6
           thumbnail: thumbnail
           url: url
           file_size: 0
@@ -2310,53 +2172,7 @@ components:
     ViberVideo:
       description: Viber video object
       example:
-        duration:
-        - image:
-            filename: filename
-            link: link
-            caption: caption
-            id: id
-          date_time:
-            fallback_value: fallback_value
-          document:
-            filename: filename
-            link: link
-            caption: caption
-            id: id
-          currency:
-            fallback_value: fallback_value
-            code: code
-            amount_1000: amount_1000
-          text: text
-          video:
-            filename: filename
-            link: link
-            caption: caption
-            id: id
-          type: type
-        - image:
-            filename: filename
-            link: link
-            caption: caption
-            id: id
-          date_time:
-            fallback_value: fallback_value
-          document:
-            filename: filename
-            link: link
-            caption: caption
-            id: id
-          currency:
-            fallback_value: fallback_value
-            code: code
-            amount_1000: amount_1000
-          text: text
-          video:
-            filename: filename
-            link: link
-            caption: caption
-            id: id
-          type: type
+        duration: 6
         thumbnail: thumbnail
         url: url
         file_size: 0
@@ -2373,9 +2189,7 @@ components:
         duration:
           description: Duration of the video in seconds. Cannot be longer than 600
             seconds.
-          items:
-            $ref: '#/components/schemas/WhatsAppParameter'
-          type: array
+          type: integer
       required:
       - duration
       - file_size
@@ -2492,10 +2306,6 @@ components:
       type: object
     WhatsAppCurrency:
       description: Whatsapp currency object.
-      example:
-        fallback_value: fallback_value
-        code: code
-        amount_1000: amount_1000
       properties:
         fallback_value:
           description: Default text if localization fails.
@@ -2562,8 +2372,6 @@ components:
       type: object
     WhatsAppDatetime:
       description: Whatsapp datetime object.
-      example:
-        fallback_value: fallback_value
       properties:
         fallback_value:
           description: Default text.
@@ -2573,11 +2381,6 @@ components:
       type: object
     WhatsAppMedia:
       description: Whatsapp media object.
-      example:
-        filename: filename
-        link: link
-        caption: caption
-        id: id
       properties:
         id:
           description: The media object ID. Do not use this field when message type
@@ -2598,30 +2401,6 @@ components:
       type: object
     WhatsAppParameter:
       description: Whatsapp component parameter.
-      example:
-        image:
-          filename: filename
-          link: link
-          caption: caption
-          id: id
-        date_time:
-          fallback_value: fallback_value
-        document:
-          filename: filename
-          link: link
-          caption: caption
-          id: id
-        currency:
-          fallback_value: fallback_value
-          code: code
-          amount_1000: amount_1000
-        text: text
-        video:
-          filename: filename
-          link: link
-          caption: caption
-          id: id
-        type: type
       properties:
         type:
           description: Type of the parameter.
@@ -2894,53 +2673,7 @@ components:
             text: text
             button_text: button_text
             video:
-              duration:
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
+              duration: 6
               thumbnail: thumbnail
               url: url
               file_size: 0
@@ -2953,53 +2686,7 @@ components:
             text: text
             button_text: button_text
             video:
-              duration:
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
+              duration: 6
               thumbnail: thumbnail
               url: url
               file_size: 0
@@ -3018,53 +2705,7 @@ components:
             text: text
             button_text: button_text
             video:
-              duration:
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
+              duration: 6
               thumbnail: thumbnail
               url: url
               file_size: 0
@@ -3077,53 +2718,7 @@ components:
             text: text
             button_text: button_text
             video:
-              duration:
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
-              - image:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                date_time:
-                  fallback_value: fallback_value
-                document:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                currency:
-                  fallback_value: fallback_value
-                  code: code
-                  amount_1000: amount_1000
-                text: text
-                video:
-                  filename: filename
-                  link: link
-                  caption: caption
-                  id: id
-                type: type
+              duration: 6
               thumbnail: thumbnail
               url: url
               file_size: 0
